--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         <img src="img/kagurasuzu-icon.ico" alt="kagurasuzu-icon">
     </p>
     <!-- snow -->
-    <div class="snow" style="color: pink;">●</div>
+    <div class="snow" style="color: lightgreen;">●</div>
     <div class="snow snow2nd" style="color: white;">●</div>
 
     <!-- javaScript -->
